@@ -182,6 +182,9 @@ Unreleased changes (1.0-dev)
 62. NUTCH-559 - NTLM, Basic and Digest Authentication schemes for web/proxy
     server. (Susam Pal via dogacan)
 
+63. NUTCH-534 - SegmentMerger: add -normalize option (Emmanuel Joke via ab)
+
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
